<resources>
    <string name="app_name">HumanResourceManager</string>
    <string name="title_activity_application_preview_h_r">ApplicationPreviewHR</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="dob">Date of Birth</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="mPosition">Managerial Position</string>
    <string name="reasonToRecruit">Reason for Recruitment</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="specializedDistrict">Specialized District</string>
    <string name="language">Language</string>
    <string name="addManagerialEmployee">Add Managerial Employee</string>
    <string name="applicationPreview">Application Preview</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="ManageAccount">Manage Account</string>
    <string name="ReviewTourGuideApplication">Review Tour Guide Application</string>
    <string name="EmployeeDetails">Employee Details</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="eUsername">Enter Username</string>
    <string name="ePassword">Enter Password</string>
    <string name="AddManagerialEmployee">Add Managerial Employee</string>

    <string name="viewApplication">View Application</string>
    <string name="nextApplication">Next Application</string>
    <string name="previousApplication">Previous Application</string>
    <string name="home">Home</string>
    <string name="occupation">Occupation</string>
    <string name="empNumber">Empolyee Number</string>
    <string name="enterEmployeeNumber">Enter Employee Number</string>
    <string name="position">Position</string>
    <string name="update">Update</string>

    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="nic">NIC</string>
    <string name="address">Address</string>
    <string name="salary">Salary</string>
    <string name="employee_id">Employee ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="job_role">Job Role</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="tom_harry">Tom Harry</string>
    <string name="e9634">E9634</string>
    <string name="janitor">Janitor</string>
    <string name="view_employee_details">View Employee Details</string>
    <string name="addnewemployees">Add New Employees</string>
    <string name="manage_acoount">Manage Acoount</string>


</resources>